<resources>
    <string name="app_name" translatable="false">cr@sh</string>
    <string name="login_twitter">Log in with Twitter</string>
    <string name="login_mastodon">Log in with Mastodon</string>
    <string name="ic_logo" translatable="false">cr@sh logo</string>
    <string name="ic_banner" translatable="false">cr@sh banner</string>
    <string name="splash_info">© 2020 TheDavidDelta\nLicensed under GNU GPLv3</string>
    <string name="login_error_browser">No browser found</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="login_loading">Loading...</string>
    <string name="login_dialog_domain_hint">Enter your instance</string>
    <string name="confirmation_ok" translatable="false">OK</string>
    <string name="login_dialog_domain_invalid">Invalid instance</string>
    <string name="menu_main_search">Search</string>
    <string name="textview_fullname" translatable="false">Full Name</string>
    <string name="textview_username" translatable="false">\@username</string>
    <string name="imageview_avatar" translatable="false">Avatar</string>
    <string name="listitem_main_crush" translatable="false">Crush</string>
    <string name="splash_error_read">Error retrieving saved accounts</string>
    <string name="main_error_mutuals">Couldn\'t retrieve mutuals</string>
    <string name="main_quit_message">Press again to exit</string>
    <string name="textview_domain" translatable="false">\@domain.com</string>
    <string name="login_error_network">Couldn\'t connect to the server</string>
    <string name="imageview_banner" translatable="false">Banner</string>
    <string name="listitem_accounts_platform" translatable="false">Platform</string>
    <string name="accounts_add">Add account</string>
    <string name="accounts_info">App info</string>
    <string name="listitem_accounts_remove">Remove</string>
    <string name="accounts_error_remove">Couldn\'t remove the account</string>
    <string name="confirmation_sure">Are you sure?</string>
    <string name="confirmation_yes">Yes</string>
    <string name="confirmation_cancel">Cancel</string>
    <string name="menu_main_account">Account</string>
    <string name="splash_error_update">Couldn\'t update accounts info</string>
    <string name="about_description"><![CDATA[<h5>Secret crush matcher for social networks<br><a href="https://github.com/TheDavidDelta/crash">Source code on GitHub</a><br>© 2020 TheDavidDelta</h5>List of Open Source dependencies and sub-dependencies used]]></string>
</resources>