<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ cr@sh - Secret crush matcher for social networks
  ~ Copyright (C) 2020 TheDavidDelta
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AccountsDialogFragment"
    android:orientation="vertical"
    android:divider="@drawable/ic_layout_separator"
    android:showDividers="middle">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageview_accounts_banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_accounts_banner"
            android:contentDescription="@string/imageview_banner"
            android:scaleType="centerCrop"
            android:src="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_accounts_avatar"
            app:cardCornerRadius="@dimen/cornerradius_rounded_avatar"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageview_accounts_avatar"
                android:layout_width="@dimen/size_accounts_avatar"
                android:layout_height="@dimen/size_accounts_avatar"
                android:contentDescription="@string/imageview_avatar"
                app:srcCompat="@drawable/ic_logo" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearlayout_accounts_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_accounts_avatar"
            android:layout_marginBottom="@dimen/margin_accounts_names"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageview_accounts_banner">

            <TextView
                android:id="@+id/textview_accounts_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/textview_fullname"
                android:textSize="@dimen/textsize_accounts_fullname" />

            <TextView
                android:id="@+id/textview_accounts_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/textview_username"
                android:textSize="@dimen/textsize_accounts_username" />

            <TextView
                android:id="@+id/textview_accounts_domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/textview_domain"
                android:textSize="@dimen/textsize_accounts_domain" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_accounts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/listitem_accounts" />

    <LinearLayout
        android:id="@+id/linearlayout_accounts_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:divider="@drawable/ic_layout_separator"
        android:showDividers="middle"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_accounts_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/accounts_add"
            app:icon="@drawable/ic_account_add"
            app:iconTint="?attr/colorOnBackground"
            app:iconPadding="@dimen/padding_accounts_options_icons"
            app:iconGravity="textStart"
            android:gravity="center"
            android:textSize="@dimen/textsize_accounts_options"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_accounts_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/accounts_info"
            app:icon="@drawable/ic_info"
            app:iconTint="?attr/colorOnBackground"
            app:iconPadding="@dimen/padding_accounts_options_icons"
            app:iconGravity="textStart"
            android:textSize="@dimen/textsize_accounts_options" />

    </LinearLayout>

</LinearLayout>