<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ cr@sh - Secret crush matcher for social networks
  ~ Copyright (C) 2020 TheDavidDelta
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="@dimen/padding_listitem_accounts_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_listitem_accounts_avatar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:layout_marginStart="@dimen/margin_listitem_accounts_sides"
        android:layout_marginEnd="@dimen/margin_listitem_accounts_avatar">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="@dimen/cornerradius_rounded_avatar"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageview_listitem_accounts_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imageview_avatar"
                app:srcCompat="@drawable/ic_logo" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_listitem_accounts_names"
        android:layout_weight="1.3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_listitem_accounts_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/textview_fullname"
            android:textSize="@dimen/textsize_listitem_accounts_fullname" />

        <TextView
            android:id="@+id/textview_listitem_accounts_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/textview_username"
            android:textSize="@dimen/textsize_listitem_accounts_username" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageview_listitem_accounts_platform"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/margin_listitem_accounts_platform"
        android:layout_weight="0.35"
        android:contentDescription="@string/listitem_accounts_platform"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_logo" />

    <ImageButton
        android:id="@+id/button_listitem_accounts_remove"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:layout_marginEnd="@dimen/margin_listitem_accounts_sides"
        android:scaleType="fitCenter"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_remove"
        android:contentDescription="@string/listitem_accounts_remove"
        android:tint="?attr/colorError" />
</LinearLayout>