<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ cr@sh - Secret crush matcher for social networks
  ~ Copyright (C) 2020 TheDavidDelta
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageview_user_banner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/imageview_banner"
                android:scaleType="centerCrop"
                android:src="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_back_bg" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_user_avatar"
        app:cardCornerRadius="@dimen/cornerradius_rounded_avatar"
        app:cardElevation="4dp"
        app:layout_anchor="@id/appbar_user"
        app:layout_anchorGravity="bottom">

        <ImageView
            android:id="@+id/imageview_user_avatar"
            android:layout_width="@dimen/size_user_avatar"
            android:layout_height="@dimen/size_user_avatar"
            android:contentDescription="@string/imageview_avatar"
            app:srcCompat="@drawable/ic_logo" />

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedscroll_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:id="@+id/linearlayout_user_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginstart_user_names"
                android:layout_marginEnd="@dimen/margin_user_avatar"
                android:layout_marginBottom="@dimen/marginbottom_user_names"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_user_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/textview_fullname"
                    android:textSize="@dimen/textsize_user_fullname" />

                <TextView
                    android:id="@+id/textview_user_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/textview_username"
                    android:textSize="@dimen/textsize_user_username" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>